# gh-notify

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  popup.glade
src/: configuration.rs  io.rs  main.rs  notify.rs
tests/: test_NotificationResponse.json
